--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vibe Editor AI - Edit Videos In Seconds With Prompts</title>
     <meta name="description" content="Edit videos in seconds with AI prompts. Upload, generate, and publish ready-to-post videos for YouTube, TikTok, and more!">
+    <!-- Allow Tailwind CDN and Stripe in Content Security Policy -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://js.stripe.com 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src *; img-src * data:; font-src *;">
     <link rel="icon" href="/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
